--- a/Frontend/CSS/login.css
+++ b/Frontend/CSS/login.css
@@ -5,7 +5,7 @@ body{
     background-position: center;
     height: 80vh;
 }
-.login-container{
+.login-form{
     display: flex;
     flex-direction: column;
     margin-top: 150px;
@@ -18,6 +18,19 @@ body{
     background-color: #8da0ed;
     border-radius: 50px;
 
+}
+.sign-up-form{
+    display: none;
+    flex-direction: column;
+    margin-top: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+    justify-content: center;
+    height: 350px;
+    width: 400px;
+    background-color: #80dde7;
+    border-radius: 50px;
 }
 
 .login-grid{
@@ -53,7 +66,7 @@ body{
 
 .login-input:focus{
     outline: none;
-    box-shadow: 5px 5px 10px rgb(72, 233, 77);
+    box-shadow: 5px 5px 10px rgb(100, 230, 184);
 }
 
 .login-buttons{
@@ -106,7 +119,7 @@ body{
     width: 90%;
     height: 40px;
     margin-bottom: 10px;
-    border-radius: 50%;
+    border-radius: 30%;
     border: 1px solid #ccc;
     /* background-color: #5430e7; */
     background-image: url('../HTML/assets/hide-password.png');
@@ -122,6 +135,6 @@ body{
 .toggle-password:hover{
     transform: scale(1.05);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-    background-color: #ee6fdf;
+    background-color: #6feee8;
 }
 
