--- a/Frontend/CSS/side-bar.css
+++ b/Frontend/CSS/side-bar.css
@@ -1,6 +1,6 @@
 body{
     padding-bottom: 500px;
-    background-color:#edb4f4;
+    background-color:rgb(189, 208, 239);
 }
 .side-bar{
     display: flex;
@@ -16,7 +16,8 @@ body{
     justify-content:flex-start;
     align-items: center;
     border-radius: 0 0 30px 0;
-    background-color:#eb6bd1
+    background-color:#74a2ed;
+    z-index: 1000;
 
 }
 
@@ -27,12 +28,12 @@ body{
     margin-bottom: 50px;
     border-radius: 50px;
     border: none;
-    background-color:rgb(234, 163, 222);
+    background-color:rgb(117, 112, 234);
     transition: 0.3s;
 }
 .side-bar-button:hover{
     transform: scale(1.05);
-    background-color: #edb4f4;
+    background-color: #919ee1;
     color:rgb(255, 255, 255);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     cursor: pointer;
