--- a/Frontend/CSS/settings.css
+++ b/Frontend/CSS/settings.css
@@ -13,14 +13,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #ca73ed;
+    background-color: #d6aaf0;
     padding: 20px;
     border-radius: 10px;
     height: 200px;
     transition: 0.3s;
 }
 .switch-container:hover{
-    transform: scale(1.05);
+    transform: scale(1.01);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 .switch-container h2{
@@ -94,3 +94,76 @@ input:checked + .slider > .slider-toggle {
 }
 
 /* DONE SWITCH */
+
+/* LCD  */
+
+.lcd-select {
+    width: 200px;
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    background-color: #e96e8f;
+    color: black;
+    font-size: 16px;
+    padding: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.lcd-select:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#lcd-status {
+    color: red;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+/* WIFI  */
+
+
+.wifi-input{
+    width: 200px;
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    background-color: #e1e1e1;
+    color: black;
+    font-size: 16px;
+    padding: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+    margin-bottom: 10px;
+    transition: 0.3s;
+}
+
+.wifi-input:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+.wifi-input:focus {
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 185, 252, 0.5);
+    transition: 0.3s;
+}
+
+.wifi-button{
+    margin-left: 30%;
+    margin-bottom: 20px;
+    width: 100px;
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    background-color: #e96e8f;
+    color: black;
+    font-size: 16px;
+    padding: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.wifi-button:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
