--- a/Frontend/CSS/chat-bot.css
+++ b/Frontend/CSS/chat-bot.css
@@ -9,8 +9,8 @@
     color: white;
     border: none;
     border-radius: 50%;
-    width: 80px;
-    height: 80px;
+    width: 75px;
+    height: 75px;
     font-size: 24px;
     box-shadow: 0 4px 8px rgba(85, 51, 237, 0.584);
     transition: 0.3s;
@@ -28,7 +28,7 @@
     bottom: 100px;
     right: 100px;
     width: 250px;
-    height: 300px;
+    height: 330px;
     background-color: #536ee6;
     border: 1px solid #ccc;
     border-radius: 50px 50px 0px 50px;
@@ -57,7 +57,7 @@
 }
 
 .chat-bot-content{
-    height: 220px;
+    height: 250px;
     overflow-y: auto;
     padding: 10px;
 }
@@ -116,8 +116,8 @@
     position: absolute;
     height: 50px;
     bottom: -85px;
-    left: 0px;
-    width: 90%;
+    right: 0px;
+    width: 85%;
     padding: 10px;
     border: none;
     border-radius: 30px 0px 30px 30px;
