--- a/Frontend/CSS/data.css
+++ b/Frontend/CSS/data.css
@@ -149,7 +149,7 @@
 
 .ai-icon{
     width: 100%;
-    height: 80px;
+    height: 100px;
     border-radius: 10px;
     /* background-color: #ccdcf1; */
     display: flex;
@@ -158,17 +158,16 @@
 
 .ai-response-text{
     display: flex;
-    padding: 0px;
-    padding-left: 20px;
-    padding-top: 10px;
-    font-size: 15px;
+    padding: 15px;
+    font-size: 17px;
+    font-family: 'Baloo 2', cursive;
     margin-top: 0px;
-    color: #333;
+    color: #2768eb;
     border-radius: 10px;
     border: 1px solid #ccc;
-    background-color: #f9f9f9;
+    background-color: #a8ceeb;
     overflow-y: auto;
-    height: 80px;
+    height: 100px;
     box-sizing: border-box;
     cursor: pointer;
 }
